5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1596_1014.log
== SUBMITION (2019-03-26 18:12:02) 
-- CODE:
bili=float(input("digite o numero"))
total=bili*0.3
print(round(total,2))

-- EXECUTION TIME:
0.238854
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:15:23) 
-- CODE:
total=float(int("total de vendas"))
p=total/100
lucro=p*30%
print(lucro)
-- ERROR:
File "XXXX", line 3
    lucro=p*30%
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:17:24) 
-- CODE:
total=float(int("total de vendas"))
p=total/100
s=30%total
lucro=total*p
print(lucro)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    total=float(int("total de vendas"))
ValueError: invalid literal for int() with base 10: 'total de vendas'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:17:55) 
-- CODE:
total=float(input("total de vendas"))
p=total/100
s=30%total
lucro=total*p
print(lucro)
-- OUTPUT:
4907.0025
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:18:06) 
-- CODE:
total=float(input("total de vendas"))
p=total/100
s=30%total
lucro=total*p
print(lucro)
-- EXECUTION TIME:
0.211416
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
4907.0025
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:19:11) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(lucro)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:19:17) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(lucro)
-- EXECUTION TIME:
0.164009
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:20:06) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(round(lucro, 2)
-- EXECUTION TIME:
0.138555
-- ERROR:
  File "/home/codebench/codes/1596/1014/main.py", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:20:20) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(round(lucro , 2)
-- EXECUTION TIME:
0.136427
-- ERROR:
  File "/home/codebench/codes/1596/1014/main.py", line 5
    
                          ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:20:28) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(round(lucro, 2)
-- ERROR:
File "XXXX", line 5
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 20:20:44) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(round(lucro, 2))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 20:20:49) 
-- CODE:
total=float(input("total de vendas"))
p=30/100
lucro=total*p
print(round(lucro, 2))
-- EXECUTION TIME:
0.131407
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
